Added whad-lib dependency

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libopencm3"]
 	path = libopencm3
 	url = https://github.com/virtualabs/libopencm3.git
+[submodule "whad-lib"]
+	path = whad-lib
+	url = git@github.com:whad-team/whad-lib.git
